[package]
name = "gitools"
version = "0.1.0"
authors = ["Kiran Sebastian <kiranjoysebastian@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
log = "*"
fern = "0.6"
git2 = "0.13"
keyboard-types = "*"
druid = { git = "https://github.com/linebender/druid" }
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.5"
